# fastapi-study

./: .pylintrc  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
fastapi_study/day1/: homework.py  test_homework.py
fastapi_study/day2/: app.py  db.py  model.py  schema.py  settings.py  test_users.py
fastapi_study/day2/routes/: user.py
fastapi_study/day3/: standalone_tasks.py  test_standalone_tasks.py
fastapi_study/day4/: app.py  app.vue  db.py  model.py  package-lock.json  package.json  schema.py
fastapi_study/day4/composables/: use-api.ts
fastapi_study/day4/server/middleware/: api-proxy.ts
fastapi_study/day5/: app.py  test_schema_app.py
fastapi_study/day6/: app.py
fastapi_study/day7/: app.py
